--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 html {
-  background-image: url(flash.jpg);
+  background-image: url(uzori5.png);
   background-repeat: no-repeat;
   background-position: center center;
   background-attachment: fixed;
